# ipfce-2024-classroom-assignment-1-285191U013-IPFCE-assignment-1

./: .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
src/: exercise-6.c  playground.c
